--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "postcss-import-ext-glob": "^2.0.1",
     "split-grid": "^1.0.11",
     "tailwindcss": "^3.0.6",
+    "throttle-debounce": "^5.0.0",
     "tippy.js": "^6.3.2"
   },
   "devDependencies": {
