Default preview_disable_action_view_annotations to true instead of false

--- a/docs/src/_data/config_options.yml
+++ b/docs/src/_data/config_options.yml
@@ -168,7 +168,7 @@
 - name: preview_disable_action_view_annotations
   group: string
   type: Boolean
-  default: false
+  default: true
   example: "config.lookbook.preview_disable_action_view_annotations = true"
   description: "Turns off action view filename annotations when generating rendered component source."
 
