ci: update appraisal lock files, add appraisal install step to release process

--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
         "rake spec"
       ],
       "after:bump": [
+        "bundle exec appraisal install",
         "npm run lint:fix",
         "npm run build"
       ],
