refactor(display_options): rename preview_display_params to preview_display_options for clarity

--- a/config/app.yml
+++ b/config/app.yml
@@ -18,7 +18,7 @@ shared:
     lax_spacing: true
   sort_examples: false
   preview_paths: []
-  preview_display_params: {}
+  preview_display_options: {}
   preview_disable_action_view_annotations: true
   preview_params_options_eval: false
   listen: false
