refactor(services): add data resolver services

--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
       "prettier --write --ignore-unknown"
     ],
     "**/*.rb": [
-      "standardrb --fix"
+      "bundle exec standardrb --fix"
     ]
   },
   "release-it": {
