Add ability to customize the folder previews appear in

--- a/config/tags.yml
+++ b/config/tags.yml
@@ -27,3 +27,8 @@ shared:
     label: Param
     yard_parser: with_name
     opts: {}
+
+  logical_path:
+    label: Logical path
+    named_args: [logical_path]
+    opts: {}
