add config_options to set default code component theme

--- a/config/app.yml
+++ b/config/app.yml
@@ -17,6 +17,9 @@ shared:
     highlight: true
     with_toc_data: true
     lax_spacing: true
+  code_options:
+    theme: github
+    dark: false
   sort_examples: false
   preview_paths: []
   preview_display_options: {}
