--- a/config/app.yml
+++ b/config/app.yml
@@ -17,7 +17,7 @@ shared:
     highlight: true
     with_toc_data: true
     lax_spacing: true
-  code_options:
+  highlighter_options:
     theme: github
     dark: false
   sort_examples: false
