add prose_options to the config to change theme and colors of the Prose::Component

--- a/config/app.yml
+++ b/config/app.yml
@@ -20,6 +20,9 @@ shared:
   highlighter_options:
     theme: github
     dark: false
+  prose_options:
+    theme: gray
+    invert_colors: false
   sort_examples: false
   preview_paths: []
   preview_display_options: {}
