refactor(entities): rename position -> priority for better clarity

--- a/config/tags.yml
+++ b/config/tags.yml
@@ -11,8 +11,8 @@ shared:
     label: Display
     opts: {}
 
-  position:
-    label: Position
+  priority:
+    label: Priority
     opts: {}
 
   id:
