feat(embeds): add support for passing embed config options via the URL

--- a/config/app.yml
+++ b/config/app.yml
@@ -26,7 +26,12 @@ shared:
   preview_disable_action_view_annotations: true
   preview_params_options_eval: false
   preview_type_default: view_component
-  embed_panels: [source, output, notes, params]
+  preview_embed_options:
+    panels: [source, output, notes, params]
+    actions: [inspect, preview]
+    display_option_controls: true
+    drawer: false
+    viewport_max_height: ~
   listen: false
   listen_paths: []
   listen_extensions: [rb, html.*]
