--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "targets": {
     "app": {
       "source": [
+        "./app/assets/lookbook/img/lucide-sprite.svg",
         "./app/assets/lookbook/js/iframe.js",
         "./app/assets/lookbook/js/lookbook.js",
         "./app/assets/lookbook/css/lookbook.css",
@@ -61,6 +62,7 @@
     "js-cookie": "^3.0.1",
     "loglevel": "^1.8.1",
     "loglevel-plugin-prefix": "^0.8.4",
+    "lucide": "^0.102.0",
     "parcel": "^2.8.0",
     "postcss": "^8.4.19",
     "postcss-import": "^15.0.0",
