docs(entities): update docs and specs with new entity class names

--- a/docs/src/_data/entities/preview.yml
+++ b/docs/src/_data/entities/preview.yml
@@ -1,4 +1,4 @@
-description: Represents an annotated ViewComponent preview class.
+description: Represents an annotated preview class.
 
 attrs:
   - name: .id
