feat(embed): add embed script to generate iframes outside of lookbook

--- a/package.json
+++ b/package.json
@@ -15,6 +15,13 @@
         "./app/assets/lookbook/css/themes/rose.css"
       ],
       "distDir": "./public/lookbook-assets"
+    },
+    "embed": {
+      "source": [
+        "./app/assets/lookbook/js/embed.js"
+      ],
+      "distDir": "./public/lookbook-assets",
+      "outputFormat": "global"
     }
   },
   "alias": {
