refactor(embeds): fixes and improvements

--- a/config/app.yml
+++ b/config/app.yml
@@ -26,10 +26,11 @@ shared:
   preview_disable_action_view_annotations: true
   preview_type_default: view_component
   preview_embed_options:
-    panels: [source, output, notes, params]
+    panels: [source, output, notes, params, "*"]
     actions: [inspect, preview]
     display_option_controls: true
     drawer: false
+    examples: []
   listen: false
   listen_paths: []
   listen_extensions: [rb, html.*]
