--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "themes:generate": "bin/generate-themes",
     "themes:watch": "watch 'npm run themes:generate' ./theme --filter=./theme/watch.js",
     "lint:fix": "standardrb --fix && prettier --write .",
-    "release": "release-it",
-    "release:dry-run": "release-it --dry-run",
+    "release": "release-it --verbose",
+    "release:dry-run": "release-it --dry-run --verbose",
     "prepare": "husky install"
   },
   "author": "Mark Perkins",
