--- a/config/panels.yml
+++ b/config/panels.yml
@@ -1,30 +1,28 @@
 shared:
-  main:
-    - name: preview
-      partial: lookbook/inspector/panels/preview
-      label: Preview
-      hotkey: v
+  preview:
+    partial: lookbook/inspector/panels/preview
+    label: Preview
+    hotkey: v
 
-    - name: output
-      partial: lookbook/inspector/panels/output
-      label: HTML
-      hotkey: h
+  output:
+    partial: lookbook/inspector/panels/output
+    label: HTML
+    hotkey: h
 
-  drawer:
-    - name: source
-      partial: lookbook/inspector/panels/source
-      label: Source
-      hotkey: s
-      copy: "->(data) { data.examples.map { |e| e.source }.join(\n) }"
+  source:
+    partial: lookbook/inspector/panels/source
+    label: Source
+    hotkey: s
+    copy: "->(data) { data.examples.map { |e| e.source }.join(\n) }"
 
-    - name: notes
-      partial: lookbook/inspector/panels/notes
-      label: Notes
-      hotkey: n
-      disabled: ->(data) { data.examples.select { |e| e.notes.present? }.none? }
+  notes:
+    partial: lookbook/inspector/panels/notes
+    label: Notes
+    hotkey: n
+    disabled: "->(data) { data.examples.select { |e| e.notes.present? }.none? }"
 
-    - name: params
-      partial: lookbook/inspector/panels/params
-      label: Params
-      hotkey: p
-      disabled: ->(data) { data.context.params.none? }
+  params:
+    partial: lookbook/inspector/panels/params
+    label: Params
+    hotkey: p
+    disabled: "->(data) { data.context.params.none? }"
