docs(2.0): start on 2.0 docs

--- a/docs/src/_data/nav.yml
+++ b/docs/src/_data/nav.yml
@@ -3,14 +3,16 @@ guide:
     items:
       - label: Overview
         url: /guide/
-      - label: Quick Start
+      - label: Installation
+        url: /guide/installation/
+      - label: First Steps
         url: /guide/quick-start/
-      - label: Upgrade Guide
-        url: /guide/upgrading/
       - label: Configuration
         url: /guide/config/
       - label: Deployment
         url: /guide/deployment/
+      - label: Upgrade Guide
+        url: /guide/upgrading/
       - label: Troubleshooting
         url: /guide/troubleshooting/
   - label: Previews
