--- a/docs/src/_data/api/component_entity.yml
+++ b/docs/src/_data/api/component_entity.yml
@@ -6,15 +6,20 @@ methods:
 - id: component-class-instance-method
   name: component_class
   path: Lookbook::ComponentEntity#component_class
-  signature: component_class
+  signature: component_class()
+  signature_call: component_class
+  signature_args: ''
   description: Returns the value of attribute component_class.
   return_types:
   scope: instance
   tags: []
+  klass: ComponentEntity
 - id: initialize-instance-method
   name: initialize
   path: Lookbook::ComponentEntity#initialize
   signature: initialize(component_class)
+  signature_call: initialize
+  signature_args: component_class
   description: ''
   return_types: ComponentEntity
   scope: instance
@@ -23,10 +28,13 @@ methods:
     tag_name: return
     text: a new instance of ComponentEntity
     types: ComponentEntity
+  klass: ComponentEntity
 - id: inline?-instance-method
   name: inline?
   path: Lookbook::ComponentEntity#inline?
-  signature: inline?
+  signature: inline?()
+  signature_call: inline?
+  signature_args: ''
   description: ''
   return_types: Boolean
   scope: instance
@@ -35,3 +43,4 @@ methods:
     tag_name: return
     text: ''
     types: Boolean
+  klass: ComponentEntity
