--- a/docs/src/_data/api/preview_entity.yml
+++ b/docs/src/_data/api/preview_entity.yml
@@ -6,15 +6,20 @@ methods:
 - id: preview-class-instance-method
   name: preview_class
   path: Lookbook::PreviewEntity#preview_class
-  signature: preview_class
+  signature: preview_class()
+  signature_call: preview_class
+  signature_args: ''
   description: Returns the value of attribute preview_class.
   return_types:
   scope: instance
   tags: []
+  klass: PreviewEntity
 - id: initialize-instance-method
   name: initialize
   path: Lookbook::PreviewEntity#initialize
   signature: initialize(code_object)
+  signature_call: initialize
+  signature_args: code_object
   description: ''
   return_types: PreviewEntity
   scope: instance
@@ -23,3 +28,4 @@ methods:
     tag_name: return
     text: a new instance of PreviewEntity
     types: PreviewEntity
+  klass: PreviewEntity
