--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "parcel:build": "parcel build --no-cache --no-optimize",
     "themes:generate": "bin/generate-themes",
     "themes:watch": "watch 'npm run themes:generate' ./theme --filter=./theme/watch.js",
-    "lint:fix": "standardrb --fix && prettier --write .",
+    "lint:fix": "bundle exec standardrb --fix && prettier --write .",
     "release": "release-it --verbose",
     "release:dry-run": "release-it --dry-run --verbose",
     "prepare": "husky install"
